se edito estetica del main, se agrego sombras a las letras y se puso hover y active a boton

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 }
 
 .principal {
-background-color: var(--negro);
+/* background-color: var(--negro); */
 display: flex;
 flex-direction: column;
 min-height: 100vh;
@@ -23,6 +23,7 @@ min-height: 100vh;
     position: absolute;
     width: 100%;
     object-fit:contain;
+    z-index: -1;
 }
 
 .footer {
