--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -5,7 +5,8 @@
 }
 
 .classnav {
-    background-color:transparent;
+    background: rgb(0,0,0);
+background: linear-gradient(180deg, rgba(0,0,0,1) 4%, rgba(0,212,255,0) 100%);
 }
 
 /* 
