--- a/src/components/main/mains.css
+++ b/src/components/main/mains.css
@@ -1,18 +1,19 @@
 .main-cont {
     height: 80vh;
-
 }
 
 .slogan {
     color: white;
     font-family: 'Courgette', cursive;
+    text-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
 .button {
     padding: 0.5rem 1rem;
     background-color: #efac1f;
     border-radius: 50px;
-    font-weight: bold;
+    font-weight: 500;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     transition: 300ms ease-out;
     font-size: 1.2rem;
 }
