--- a/src/components/Admin/styles/productos.css
+++ b/src/components/Admin/styles/productos.css
@@ -1,14 +1,20 @@
+:root {
+    --negro: #21201E;
+    --blanco: #FFF;
+    --naranja: #EFAC1F;
+  }
+
 .producto-contenedor{
     width: 500px;
     min-height: 65px;
-    background-color: aqua;
+    background-color: var(--blanco);
     margin: 5px 0;
     padding: 8px 15px 8px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     border-radius: 7px;
-    border: 1px solid #fff;
+    border: 1px solid var(--negro);
 }
 
 .producto-texto{
