--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -5,8 +5,9 @@
 }
 
 .classnav {
-    background: rgb(0,0,0);
-background: linear-gradient(180deg, rgba(0,0,0,1) 4%, rgba(0,212,255,0) 100%);
+background: rgba(1, 1, 1, 1.0);
+background: linear-gradient(180deg, rgba(1, 1, 1, 1.0), rgba(255, 255, 255, 0.0));
+
 }
 
 /* 
