Agregue toda la logica de agregar un producto y de poder editarlo, sumando lo que seria los estilos de esto

--- a/src/pages/Admin2/admin.css
+++ b/src/pages/Admin2/admin.css
@@ -1,15 +1,26 @@
+.contenedor-productos{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
 .productos-lista-principal{
     width: 600px;
     min-height: 500px;
     background-color: #EFAC1F;
+    opacity: 0.9;
     padding: 25px;
     margin: 10px;
     border-radius: 26px;
+    max-height: 400px;
+    overflow-y: auto; 
 }
 
 .titulo-productos{
   color: #fff;
   font-size: 25px;
+  font-family: Roboto, sans-serif;
   text-align: center;
   margin: 20px 0;
 }
