--- a/src/components/Admin/styles/allProductos.css
+++ b/src/components/Admin/styles/allProductos.css
@@ -1,35 +1,28 @@
-/* .formulario {
-    padding: 10px;
-    height: 250px;
-    background: gray;
-} */
-
- :root {
+:root {
     --negro: #21201E;
     --blanco: #FFF;
     --naranja: #EFAC1F;
     --mi-tipografia: sans-serif;
   }
 
-.producto-contenedor{
+.card-products{
     width: 500px;
     min-height: 65px;
     background-color: var(--blanco);
     margin: 5px 0;
     padding: 8px 15px 8px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     border-radius: 7px;
     border: 1px solid var(--negro);
-} 
+}
 
 .producto-texto{
     width: 100%;
     height: 100%;
     font-size: 20px;
+    display: flex;
+    align-items: center;
+    overflow-wrap: anywhere;
 }
-
-
-/* .producto-icono{
-    width: 25px;
-    height: 25px;
-    margin: 5px;
-} */
