--- a/src/components/Admin/styles/productos.css
+++ b/src/components/Admin/styles/productos.css
@@ -1,9 +1,3 @@
-/* .formulario {
-    padding: 10px;
-    height: 250px;
-    background: gray;
-} */
-
  :root {
     --negro: #21201E;
     --blanco: #FFF;
@@ -12,10 +6,9 @@
   }
 
 .producto-contenedor{
+    min-width: 580px;
     min-height: 65px;
     background-color: var(--blanco);
-    margin: 5px 0;
-    padding: 8px 15px 8px 20px;
     border-radius: 7px;
     border: 1px solid var(--negro);
 } 
@@ -23,12 +16,8 @@
 .producto-texto{
     width: 100%;
     height: 100%;
-    font-size: 20px;
 }
 
-
-/* .producto-icono{
-    width: 25px;
-    height: 25px;
-    margin: 5px;
-} */
+.input-productos{
+    padding-right: 0 !important;
+}
