se establecio imagen de fondo y se corrigio spinner

--- a/src/components/main/mains.css
+++ b/src/components/main/mains.css
@@ -7,9 +7,9 @@
     border-radius: 0 !important;
 }
 
-    .product-list {
-        background-color: white;
-    }
+    /* .product-list {
+        background-color: #333333;
+    } */
 
     .image-div {
         height: 50%;
