--- a/src/App.css
+++ b/src/App.css
@@ -13,11 +13,18 @@
     --blanco: #ffffff;
 }
 
+
+
 .principal {
-/* background-color: var(--negro); */
+/* background-color: #333333; */
 display: flex;
 flex-direction: column;
 min-height: 100vh;
+/* background-color: rgba(255, 255, 255, 0.8); */
+background-image: url('src/assets/img/imagen-fond.jpg');
+background-size: cover;
+background-attachment: fixed;
+background-position: center;
 }
  
 
