se arreglo tamaño y organizacion de tarjetas

--- a/src/components/main/mains.css
+++ b/src/components/main/mains.css
@@ -1,28 +1,4 @@
-.main-cont {
+/* .main-cont {
     height: 100vh;
     position: relative;
-}
-
-.card {
-    border-radius: 0 !important;
-}
-
-    /* .product-list {
-        background-color: #333333;
-    } */
-
-    .image-div {
-        height: 50%;
-    }
-
-    .title-div{
-        height: 30%;
-    }
-
-    .price-div {
-        height: 10%;
-    }
-
-    .button-div{
-        height: 10%;
-    }
+} */
