--- a/src/pages/register/Register.css
+++ b/src/pages/register/Register.css
@@ -9,10 +9,14 @@
     width: 30%;
     height: 50%;
     border-radius: 7%;
-
+    margin-bottom: 50px;
 }
 
-.iniciar {
+/* Establece el mismo color de fondo para ambos botones */
+.iniciar,
+.registrarse {
     margin: 10px;
     padding-right: 30px;
+    background-color: #82b817;
+    /* Aquí puedes especificar el color que desees */
 }
