--- a/src/pages/Admin2/admin.css
+++ b/src/pages/Admin2/admin.css
@@ -27,49 +27,50 @@
 }
 
 .contenedor-lista::-webkit-scrollbar {
-  width: 12px;               /* width of the entire scrollbar */
+  width: 12px;
 
 }
 
 .contenedor-lista::-webkit-scrollbar-track {
-  background: none;        /* color of the tracking area */
+  background: none;       
 }
 
 .contenedor-lista::-webkit-scrollbar-thumb {
-  background-color: var(--negro);    /* color of the scroll thumb */
-  border-radius: 20px;       /* roundness of the scroll thumb */
-  border: 3px solid var(--naranja);  /* creates padding around scroll thumb */
+  background-color: var(--negro);    
+  border-radius: 20px;      
+  border: 3px solid var(--naranja);  
 }
 
+@media (max-width: 576px) {
+  .contenedor-admin {
+    flex-direction: column !important; /* Cambia la dirección del flex a columna */
+    min-height: 100%;
+  }
+
+  .contenedor-lista {
+    margin-bottom: 20px; /* Agrega un espacio entre los elementos apilados */
+  }
+}
+
+/* Estilos para pantallas de escritorio (ancho mínimo de 768px) */
+@media (min-width: 768px) {
+  .contenedor-productos-usuarios {
+    display: flex; /* Usar flexbox para alinear elementos en la misma fila */
+    justify-content: space-between; /* Distribuir espacio horizontalmente */
+  }
+  .contenedor-lista {
+    width: 48%; /* Establecer el ancho para que ambos elementos se ajusten en la misma fila */
+  }
+}
+
+/* Estilos para pantallas más pequeñas (ancho máximo de 767px) */
+@media (max-width: 767px) {
+  .contenedor-lista {
+    width: 100%; /* Establecer el ancho completo para que los elementos se apilen uno encima del otro */
+  }
+}
 
 
 .titulo {
   text-align: center;
 }
-
-/* .contenedor-productos{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-}
-
-.productos-lista-principal{
-    width: 700px;
-    min-height: 500px;
-    background-color: #EFAC1F;
-    opacity: 0.9;
-    padding: 20px;
-    margin: 10px;
-    border-radius: 26px;
-    max-height: 400px;
-    overflow-y: auto; 
-}
-
-.titulo-productos{
-  color: #fff;
-  font-size: 25px;
-  font-family: Roboto, sans-serif;
-  text-align: center;
-  margin: 20px 0;
-} */
