se cambiaron estilos en la pagina de admin

--- a/src/components/Admin/styles/productos.css
+++ b/src/components/Admin/styles/productos.css
@@ -1,7 +1,7 @@
  :root {
    --negro: #21201E;
    --blanco: #FFF;
-   --naranja: #EFAC1F;
+   --naranja: #2C4B45;
    --mi-tipografia: sans-serif;
  }
 
