--- a/src/pages/admin-actions/admin.css
+++ b/src/pages/admin-actions/admin.css
@@ -10,3 +10,20 @@
   background: linear-gradient(90deg, rgba(44,75,69,0.6278886554621849) 0%, rgba(44,75,69,0.6306897759103641) 100%);
   margin: 0px 35px;
 }
+
+
+.nav-link {
+  color:white !important;
+  background-color: transparent !important;
+}
+
+/* .nav-link:active {
+  color: black !important;
+}  */
+
+
+
+/* .nav-tabs .nav-item.show .nav-link .nav-tabs .nav-link:active  {
+color: black !important;
+background-color: transparent !important;
+} */
